--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>ALERTA<br>ALIMENTARIA</h1>
         <input type="email" placeholder="Ingrese su correo" class="input">
         <input type="password" placeholder="Ingrese su contraseña" class="input">
-        <button class="boton">Ingresar</button>
+        <a href="home.html" class="boton">Ingresar</a>
     </main>
 
     <div class="esquina"></div>
