--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
         <div class="opciones">
             <div class="opcion">
                 <img src="assets/proveedor.png" alt="Proveedor">
-                <a href="#" class="boton-opcion">Buscar Proveedor</a>
+                <a href="buscar_proveedor.html" class="boton-opcion">Buscar Proveedor</a>
             </div>
             <div class="opcion">
                 <img src="assets/materia.png" alt="Materia Prima">
