--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
             </div>
             <div class="opcion">
                 <img src="assets/materia.png" alt="Materia Prima">
-                <a href="#" class="boton-opcion">Buscar Materia Prima</a>
+                <a href="buscar_materia.html" class="boton-opcion">Buscar Materia Prima</a>
             </div>
             <div class="opcion">
                 <img src="assets/informe.png" alt="Informe">
