--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
             </div>
             <div class="opcion">
                 <img src="assets/informe.png" alt="Informe">
-                <a href="#" class="boton-opcion">Generar Informe</a>
+                <a href="informe.html" class="boton-opcion">Generar Informe</a>
             </div>
         </div>
     </main>
