--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <main class="contenedor">
         <div class="etiqueta">Bienvenido</div>
         <h1>ALERTA<br>ALIMENTARIA</h1>
-        <input type="email" placeholder="Ingrese su correo" class="input">
-        <input type="password" placeholder="Ingrese su contraseña" class="input">
-        <a href="home.html" class="boton">Ingresar</a>
+        <input type="text" placeholder="Ingrese su usuario" class="input" id="usuario">
+        <input type="password" placeholder="Ingrese su contraseña" class="input" id="contrasena">
+        <button class="boton" onclick="validarLogin()">Ingresar</button>
+        <p id="error" style="color: red; margin-top: 10px;"></p>
     </main>
 
     <div class="esquina"></div>
