--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     { nombre: "213141473", contrasena: "4147" },
     { nombre: "211830980", contrasena: "3098" },
     { nombre: "210366792", contrasena: "6679" },
-    { nombre: "admin", contrasena: "admin" }
+    { nombre: "211310693", contrasena: "1069" },
+    { nombre: "211648783", contrasena: "4878" },  
+    { nombre: "Admin", contrasena: "Admin" }
   ];
 
   function validarLogin() {
