--- a/buscar_proveedor.html
+++ b/buscar_proveedor.html
@@ -42,7 +42,7 @@
     const filasPorPagina = 10;
 
     window.addEventListener("DOMContentLoaded", () => {
-      fetchExcelDesdeGitHub("https://raw.githubusercontent.com/JavieraMarty/EII5140/main/data/proveedores.xlsx");
+      fetchExcelDesdeGitHub("https://github.com/JavieraMarty/EII5140/raw/ccd7216621dfd48af348edabe9efc4f2508ebcb6/data/proveedores.xlsx");
 
     function fetchExcelDesdeGitHub(url) {
       fetch(url)
