--- a/informe.html
+++ b/informe.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Informe de Proveedor</title>
+    <title>Informe general</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main class="contenedor-informe">
-        <h1>Nombre de proveedor</h1>
+        <h1>Informe general</h1>
 
         <div class="bloques-informe">
             <div class="bloques-izquierda">
