--- a/informe.html
+++ b/informe.html
@@ -1,23 +1,90 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Informe general</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Informe general</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      background-color: #111;
+      color: white;
+      font-family: Arial, sans-serif;
+      padding: 40px;
+    }
+    h1 {
+      font-size: 48px;
+      margin-bottom: 30px;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      gap: 20px;
+    }
+    .bloque-verde {
+      background-color: #b5ff63;
+      padding: 20px;
+      border-radius: 10px;
+      color: black;
+      text-align: center;
+    }
+    .bloque-verde img {
+      width: 100%;
+      border-radius: 6px;
+      margin-top: 10px;
+    }
+    .bloque-recomendaciones {
+      background-color: #b5ff63;
+      padding: 20px;
+      border-radius: 10px;
+      color: black;
+      white-space: pre-wrap;
+      font-size: 16px;
+      line-height: 1.6;
+    }
+  </style>
 </head>
 <body>
-    <main class="contenedor-informe">
-        <h1>Informe general</h1>
+  <h1>Informe general</h1>
 
-        <div class="bloques-informe">
-            <div class="bloques-izquierda">
-                <div class="bloque-verde">Proveedores</div>
-                <div class="bloque-verde">Materias</div>
-            </div>
-            <div class="bloque-recomendaciones">
-                Recomendaciones
-            </div>
-        </div>
-    </main>
+  <div class="grid">
+    <div style="display: flex; flex-direction: column; gap: 20px;">
+      <!-- Proveedores -->
+      <div class="bloque-verde">
+        <strong>Proveedores</strong>
+        <img src="https://raw.githubusercontent.com/JavieraMarty/EII5140/main/img/top10empresas.jpeg" alt="Top 10 empresas">
+      </div>
+
+      <!-- Materias -->
+      <div class="bloque-verde">
+        <strong>Materias</strong>
+        <img src="https://raw.githubusercontent.com/JavieraMarty/EII5140/main/img/top10materias.jpeg" alt="Top 10 materias">
+      </div>
+
+      <!-- Clustering -->
+      <div class="bloque-verde">
+        <strong>Clustering</strong>
+        <img src="https://raw.githubusercontent.com/JavieraMarty/EII5140/main/img/clustering.jpeg" alt="Clustering gráfico">
+      </div>
+    </div>
+
+    <!-- Recomendaciones -->
+    <div class="bloque-recomendaciones">
+<strong>Clúster 0 – Riesgo bajo y puntual</strong>
+Recomendación:
+* Mantener monitoreo estándar.
+* Considerar programas de formación o asistencia técnica para prevención de futuras alertas.
+
+<strong>Clúster 1 – Riesgo emergente con variedad alta</strong>
+Recomendación:
+* Monitoreo proactivo y priorización en planes de fiscalización.
+* Evaluar si el tipo de alerta sugiere problemas de origen sistémico (ej. procesos, calidad, proveedores).
+
+<strong>Clúster 2 – Riesgo sostenido</strong>
+Recomendación:
+* Auditar con mayor frecuencia.
+* Considerar sanciones o restricciones si hay reincidencia sin mejora.
+* Verificar si existe un patrón común (origen, materia prima, agente) que justifique alertas reiteradas.
+    </div>
+  </div>
 </body>
 </html>
