--- a/informe.html
+++ b/informe.html
@@ -2,113 +2,122 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Informe general</title>
+  <title>Informe General</title>
   <link rel="stylesheet" href="style.css">
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
       background-color: #111;
       color: white;
       font-family: Arial, sans-serif;
-      padding: 40px;
       margin: 0;
-      overflow-y: auto;
+      padding: 40px;
     }
 
     h1 {
-      font-size: 48px;
+      font-size: 42px;
       margin-bottom: 30px;
     }
 
-    .contenedor {
+    .fila {
       display: flex;
       gap: 20px;
-      align-items: flex-start;
+      margin-bottom: 20px;
       flex-wrap: wrap;
     }
 
-    .columnas {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      flex: 2;
-      min-width: 300px;
-    }
-
-    .bloque-verde {
+    .bloque-imagen {
       background-color: #b5ff63;
-      padding: 20px;
       border-radius: 10px;
-      color: black;
+      padding: 15px;
+      flex: 1;
+      min-width: 300px;
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
-    .bloque-verde img {
+    .bloque-imagen img {
       max-width: 100%;
       height: auto;
-      border-radius: 6px;
+      border-radius: 5px;
     }
 
-    .bloque-recomendaciones {
+    .bloque-recomendacion {
       background-color: #b5ff63;
-      padding: 20px;
       border-radius: 10px;
-      color: black;
-      white-space: pre-wrap;
-      font-size: 16px;
-      line-height: 1.6;
+      padding: 20px;
       flex: 1;
-      min-width: 250px;
+      min-width: 300px;
+      color: black;
     }
 
-    @media screen and (max-width: 900px) {
-      .contenedor {
+    .bloque-recomendacion h2 {
+      font-size: 22px;
+      margin-top: 0;
+      margin-bottom: 10px;
+    }
+
+    .bloque-recomendacion h3 {
+      font-size: 18px;
+      margin-bottom: 5px;
+    }
+
+    ul {
+      margin-top: 0;
+      padding-left: 20px;
+    }
+
+    @media (max-width: 768px) {
+      .fila {
         flex-direction: column;
       }
     }
   </style>
 </head>
 <body>
-  <h1>Informe general</h1>
+  <h1>Informe General</h1>
 
-  <div class="contenedor">
-    <!-- Gráficos a la izquierda -->
-    <div class="columnas">
-      <div class="bloque-verde">
-        <img src="https://raw.githubusercontent.com/JavieraMarty/EII5140/main/img/top10empresas.jpeg" alt="Top 10 empresas">
-      </div>
-
-      <div class="bloque-verde">
-        <img src="https://raw.githubusercontent.com/JavieraMarty/EII5140/main/img/top10materias.jpeg" alt="Top 10 materias">
-      </div>
-
-      <div class="bloque-verde">
-        <img src="https://raw.githubusercontent.com/JavieraMarty/EII5140/main/img/clustering.jpeg" alt="Clustering gráfico">
-      </div>
+  <!-- Fila 1 -->
+  <div class="fila">
+    <div class="bloque-imagen">
+      <img src="https://raw.githubusercontent.com/JavieraMarty/EII5140/main/img/top10materias.jpeg" alt="Top 10 materias primas">
     </div>
+    <div class="bloque-recomendacion">
+      <h2>Recomendaciones</h2>
+      <h3>Clúster 0 – Riesgo bajo y puntual</h3>
+      <ul>
+        <li>Mantener monitoreo estándar.</li>
+        <li>Considerar programas de formación o asistencia técnica para prevención de futuras alertas.</li>
+      </ul>
+    </div>
+  </div>
 
-    <!-- Recomendaciones a la derecha -->
-    <div class="bloque-recomendaciones">
-<b>Clúster 0 – Riesgo bajo y puntual</b>
-Recomendación:
-* Mantener monitoreo estándar.
-* Considerar programas de formación o asistencia técnica para prevención de futuras alertas.
+  <!-- Fila 2 -->
+  <div class="fila">
+    <div class="bloque-imagen">
+      <img src="https://raw.githubusercontent.com/JavieraMarty/EII5140/main/img/top10empresas.jpeg" alt="Top 10 empresas con alertas">
+    </div>
+    <div class="bloque-recomendacion">
+      <h3>Clúster 1 – Riesgo emergente con variedad alta</h3>
+      <ul>
+        <li>Monitoreo proactivo y priorización en planes de fiscalización.</li>
+        <li>Evaluar si el tipo de alerta sugiere problemas de origen sistémico (ej. procesos, calidad, proveedores).</li>
+      </ul>
+    </div>
+  </div>
 
-<b>Clúster 1 – Riesgo emergente con variedad alta</b>
-Recomendación:
-* Monitoreo proactivo y priorización en planes de fiscalización.
-* Evaluar si el tipo de alerta sugiere problemas de origen sistémico (ej. procesos, calidad, proveedores).
-
-<b>Clúster 2 – Riesgo sostenido</b>
-Recomendación:
-* Auditar con mayor frecuencia.
-* Considerar sanciones o restricciones si hay reincidencia sin mejora.
-* Verificar si existe un patrón común (origen, materia prima, agente) que justifique alertas reiteradas.
+  <!-- Fila 3 -->
+  <div class="fila">
+    <div class="bloque-imagen">
+      <img src="https://raw.githubusercontent.com/JavieraMarty/EII5140/main/img/clustering.jpeg" alt="Clustering de empresas">
+    </div>
+    <div class="bloque-recomendacion">
+      <h3>Clúster 2 – Riesgo sostenido</h3>
+      <ul>
+        <li>Auditar con mayor frecuencia.</li>
+        <li>Considerar sanciones o restricciones si hay reincidencia sin mejora.</li>
+        <li>Verificar si existe un patrón común (origen, materia prima, agente) que justifique alertas reiteradas.</li>
+      </ul>
     </div>
   </div>
 </body>
