--- a/buscar_proveedor.html
+++ b/buscar_proveedor.html
@@ -42,7 +42,7 @@
     const filasPorPagina = 10;
 
     window.addEventListener("DOMContentLoaded", () => {
-      fetchExcelDesdeGitHub("https://github.com/JavieraMarty/EII5140/raw/0e916990023bb933c9699f7164330e387a7a29bb/data/proveedores.xlsx");
+      fetchExcelDesdeGitHub("https://raw.githubusercontent.com/JavieraMarty/EII5140/main/data/proveedores.xlsx");
     });
 
     function fetchExcelDesdeGitHub(url) {
